<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/button3"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/Top_Spacing"
        android:background="@color/colorPrimary"
        android:text="@string/my_devices"
        android:textColor="@color/textColorWhite"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_Top"
        android:background="@color/colorPrimary"
        android:layout_gravity="center_horizontal"
        android:text="@string/all_devices"
        android:textColor="@color/textColorWhite" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/margin_Top"
        android:background="@color/colorPrimary"
        android:text="@string/register_complain"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/textColorWhite"
        />
</LinearLayout>